versioned_docs/version-0.7.1/7a.env-config.md
---
title: Environment Variables
id: config-env
---

If you don't want to use configuration files or use command-line arguments, you can choose to use
environment variables for configuration. The environment variables are divided into sections
for convenience, per the [configuration file](config-files).

## System

| Variable          | Setting                      | Expected value                                  |
| ----------------- | ---------------------------- | ----------------------------------------------- |
| SKY_SYSTEM_HOST   | Sets the host                | A valid IPv4/IPv6 address                       |
| SKY_SYSTEM_PORT   | Sets the port                | 16-bit positive integer                         |
| SKY_SYSTEM_NOART  | Disables terminal artwork    | `true`/`false`                                  |
| SKY_SYSTEM_MAXCON | Sets the maximum connections | 64/32 bit positive integer, depending on system |

## BGSAVE

| Variable            | Setting                  | Expected value                   |
| ------------------- | ------------------------ | -------------------------------- |
| SKY_BGSAVE_ENABLED  | Enables/disables BGSAVE  | `true`/`false`                   |
| SKY_BGSAVE_DURATION | Sets the BGSAVE interval | Non-zero 64-bit positive integer |

## Snapshots

| Variable              | Setting                                               | Expected value                                        |
| --------------------- | ----------------------------------------------------- | ----------------------------------------------------- |
| SKY_SNAPSHOT_ENABLED  | Enables/disables snapshots                            | `true`/`false`                                        |
| SKY_SNAPSHOT_DURATION | Sets the snapshot interval                            | Non-zero 64-bit positive integer                      |
| SKY_SNAPSHOT_KEEP     | Sets the maximum number of snapshots to keep          | `0` for keeping all or any positive 32/64 bit integer |
| SKY_SNAPSHOT_FAILSAFE | Sets if writes should be disabled on snapshot failure | `true`/`false`                                        |

## TLS

| Variable       | Setting                                           | Expected value          |
| -------------- | ------------------------------------------------- | ----------------------- |
| SKY_TLS_PORT   | Sets the TLS port                                 | 16-bit positive integer |
| SKY_TLS_ONLY   | Enables/disables TLS only mode                    | `true`/`false`          |
| SKY_TLS_CERT   | Sets the location of the TLS cert                 | String                  |
| SKY_TLS_KEY    | Sets the location of the TLS private key          | String                  |
| SKY_TLS_PASSIN | Sets the location of the TLS private key password | String                  |
